2008-02-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserFolder.m ([-login]): removed useless
	method.
	([SOGoUserFolder -ownerInContext:_ctx]): compute the owner name
	from a SOGoUser instance initialized with the nameInContainer as
	initial login name. This way, all the objects belonging to the
	corresponding user will be accessible with all the fields
	mentionned in the "bindFields" LDAP settings value.
	([SOGoUserFolder -privateCalendars:keyinContext:localContext])
	([SOGoUserFolder -privateContacts:_keyinContext:_ctx]): use -[self
	ownerInContext:] to determine the OCS path.

	* SoObjects/Mailer/SOGoSharedMailAccount.[hm]: removed useless
	module.

	* SoObjects/Mailer/SOGoSharedInboxFolder.[hm]: removed useless
	module.

	* UI/PreferencesUI/UIxPreferences.m ([UIxPreferences
	-setSignature:newSignature]): invoke -[SOGoUser saveMailAccounts]

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -defaultIdentity]): method
	moved from UIxPreferences.m.
	([SOGoUser -saveMailAccounts]): new methods that save the
	"MailAccounts" preference in the user settings.

	* SoObjects/SOGo/LDAPUserManager.m ([LDAPUserManager
	+initialize]): issue a warning whenever "SOGoDefaultMailDomain"
	is not configured in the user defaults, setting it to "localhost"
	by default.
	([LDAPUserManager +defaultMailDomainIsConfigured]): new method
	that returns whether "SOGoDefaultMailDomain" is configured.

2008-02-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder -ocsFolder]):
	send an email only when not in a dav request.
	([SOGoGCSFolder -delete]): same as above.

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount
	-supportsQuotas]): test quota support by querying the server
	capability.

2008-02-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -acceptAction])
	([UIxMailPartICalActions -declineAction]): define the organizer of